# metrics-calculator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pylintrc  pyproject.toml
.github/workflows/: main.yml  release.yml
automate_example/: CLAUDE.md
docs/: architecture.md
src/: __init__.py  config.py  main.py
src/adapeters/speckle/: get_client.py  mappers.py
src/adapters/: create_speckle_model.py  domain_to_speckle.py  get_client.py  latest_version.py  mappers.py  metric_model_setup.py  new_version.py  receive_data.py  speckle_client.py  speckle_to_domain.py  validators.py
src/application/: run_application.py
src/domain/metrics/: all_metrics.py  area_helper.py  carbon_efficiency.py  carbon_intensity.py  circulation_efficiency.py  daylight_potential.py  green_space_distance.py  green_space_index.py  net_floor_area_ratio.py  program_diversity.py  usable_area_ratio.py  volume_to_envelope.py
src/domain/model/: elements.py  fixture.py  model_filter.py  types.py
tests/: pylintrc  test_automate_contract.py
tests/adapters/: test_create_domain_model.py  test_create_speckle_model.py  test_latest_version.py  test_metric_model_setup.py  test_new_version.py  test_receive_data.py  test_validators.py
tests/domain/: fixture.py  loader.py  rulebook.json  test_all_metrics.py  test_carbon_efficiency.py  test_carbon_intensity.py  test_circulation_efficiency.py  test_daylight_potential.py  test_green_space_index.py  test_model_filter.py  test_net_floor_area_ratio.py  test_program_diversity.py  test_usable_area_ratio.py  test_volume_to_envelope.py
(+2 files in other folders)
