[project]
name = "digital-tissue-automate"
version = "0.1.0"
requires-python = ">=3.10"
authors = [{ name = "Speckle Systems", email = "hello@speckle.systems" }]
maintainers = [{ name = "Speckle Systems", email = "hello@speckle.systems" }]
description = "A Speckle Automate function template using specklepy"
readme = "README.md"
license = "Apache-2.0"
keywords = ["speckle", "automate", "bim", "aec"]
dependencies = ["specklepy>=3.2.4"]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "ruff==0.11.12",
    "dotenv>=0.9.9",
    "gql>=3.5.3",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
exclude = [".venv", "**/*.yml"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    "D",  # pydocstyle
    "I",  # isort
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]
